<resources>
    <string name="app_name">LabDay</string>
    <string name="logoDescription" translatable="false">logo</string>
    <string name="double_back_info">Naciśnij ponownie by wyjść</string>
    <string name="pref_file_name">pref</string>
    <string name="pref_api_last_update_id">apiLastUpdateID</string>
    <string name="unable_to_login">Nie można zalogować</string>
    <string name="login_background">login_background</string>
    <string name="login_background_url">https://nkn.gov.pl/wp-content/uploads/2016/11/bud_c-13_pwr.jpg</string>
    <string name="login_card_title">logowanie</string>
    <string name="login_card_login">login:</string>
    <string name="login_card_password">hasło:</string>
    <string name="login_card_login_button">rozpocznij</string>
    <string name="login_card_error_text_holder">TextView</string>
    <string name="login_logo_text">labday</string>
    <string name="loading_animation_desc">loading animation</string>
    <string name="login_failed_empty_fields">Uzupełnij wszystkie pola</string>
    <string name="login_no_internet">Brak połączenia z internetem</string>
    <string name="access_token_field">accessTokenField</string>
    <string name="lab_day_logo">LabDay logo</string>
    <string name="menu_card_icon">Menu card icon</string>
    <string name="menu_title_timetable">Harmonogram</string>
    <string name="menu_title_map">Inne miejsca</string>
...
