...
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintVertical_chainStyle="spread_inside" />

                <include
                    android:id="@+id/menu_timetable"
                    layout="@layout/menu_card"
                    android:layout_width="0dp"
                    android:layout_height="0dp"
                    android:layout_marginEnd="16dp"
                    android:layout_marginStart="16dp"
                    android:layout_marginTop="8dp"
...
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/menu_logo"
                    app:path="@{path}"
                    app:title="@{@string/menu_title_timetable}" />

                <include
                    android:id="@+id/menu_map"
                    layout="@layout/menu_card"
                    android:layout_width="0dp"
                    android:layout_height="0dp"
                    android:layout_marginEnd="16dp"
                    android:layout_marginStart="16dp"
                    android:layout_marginTop="8dp"
...
                    app:layout_constraintHorizontal_bias="0.0"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/menu_timetable"
                    app:title="@{@string/menu_title_map}" />

                <include
                    android:id="@+id/menu_media"
                    layout="@layout/menu_card"
                    android:layout_width="0dp"
                    android:layout_height="0dp"
                    android:layout_marginEnd="16dp"
                    android:layout_marginStart="16dp"
                    android:layout_marginTop="8dp"
...
                    app:layout_constraintHorizontal_bias="0.0"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/menu_map"
                    app:title="@{@string/menu_title_media}" />

                <include
                    android:id="@+id/menu_info"
                    layout="@layout/menu_card"
                    android:layout_width="0dp"
                    android:layout_height="0dp"
                    android:layout_marginEnd="16dp"
                    android:layout_marginStart="16dp"
                    android:layout_marginTop="8dp"
...
